# cookiecutter-python-template

./: .coderabbit.yaml  .cspell.json  .gitignore  .pre-commit-config.yaml  CENTRALIZATION_ANALYSIS.md  CLAUDE.md  DEVELOPMENT.md  FILE_LOCATIONS_INDEX.md  MANAGEMENT_COMMANDS_PROPOSAL.md  OPENSSF_COMPLIANCE_ANALYSIS.md  PATTERNS_QUICK_REFERENCE.txt  PUSH_INSTRUCTIONS.md  PUSH_TO_GITHUB.md  QUICK_START.sh  README.md  cookiecutter.json  pyproject.toml  sonar-project.properties
.claude/: .mcp.json
{{ cookiecutter.repo_name }}/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  noxfile.py  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  security-exceptions.yml
{{ cookiecutter.repo_name }}/.github/workflows/: auth-service-token-example.yml  ci.yml  cifuzzy.yml  codecov.yml  codeql.yml  dependency-review.yml  deploy-docs-production.yml  deploy-docs.yml  mutation-testing.yml  pr-validation.yml  renovate-auto-merge.yml  reuse.yml  sbom.yml  scorecard.yml  security-scan-summary.yml  setup-assured-oss.yml
{{ cookiecutter.repo_name }}/scripts/: check-openssf.sh
{{ cookiecutter.repo_name }}/src/: __init__.py  main.py  main_core.py
{{ cookiecutter.repo_name }}/src/agents/: __init__.py  base_agent.py  create_agent.py  exceptions.py  models.py  registry.py
{{ cookiecutter.repo_name }}/src/api/: __init__.py  ab_testing_endpoints.py  auth_endpoints.py  dynamic_loading_endpoints.py  role_endpoints.py
{{ cookiecutter.repo_name }}/src/auth/: __init__.py  config.py  constants.py  exceptions.py  jwks_client.py  jwt_validator.py  middleware.py  models.py  permissions.py  role_manager.py  service_token_manager.py  types.py
{{ cookiecutter.repo_name }}/src/automation/: __init__.py  token_rotation_scheduler.py
{{ cookiecutter.repo_name }}/src/config/: README.md  __init__.py  constants.py  health.py  performance_config.py  settings.py  validation.py
{{ cookiecutter.repo_name }}/src/core/: __init__.py  ab_testing_framework.py  analytics_engine.py  claude_integration.py  comprehensive_prototype_demo.py  conservative_fallback_chain.py  create_processor_core.py  dynamic_function_loader.py  dynamic_loading_integration.py  fallback_circuit_breaker.py  fallback_integration.py  function_loading_demo.py  help_system.py  hyde_processor.py  performance_optimizer.py  query_counselor.py  task_detection.py  template_system_core.py  token_optimization_monitor.py  user_control_system.py  vector_store.py  zen_mcp_error_handling.py
{{ cookiecutter.repo_name }}/src/database/: __init__.py  base_service.py  connection.py  models.py
{{ cookiecutter.repo_name }}/src/mcp_integration/: __init__.py  client.py  config_manager.py  docker_mcp_client.py  hybrid_router.py  mcp_client.py  model_registry.py  openrouter_client.py  parallel_executor.py
{{ cookiecutter.repo_name }}/src/monitoring/: __init__.py  ab_testing_dashboard.py  integration_utils.py  metrics_collector.py  performance_dashboard.py  service_token_monitor.py
{{ cookiecutter.repo_name }}/src/security/: __init__.py  audit_logging.py  error_handlers.py  input_validation.py  middleware.py  rate_limiting.py
{{ cookiecutter.repo_name }}/src/ui/: __init__.py  multi_journey_interface.py
{{ cookiecutter.repo_name }}/src/utils/: __init__.py  circuit_breaker.py  datetime_compat.py  encryption.py  logging_mixin.py  observability.py  performance_monitor.py  resilience.py  secure_random.py  setup_validator.py  time_utils.py
{{ cookiecutter.repo_name }}/tests/: conftest.py  conftest_backup.py  test_ci_conditional_verification.md
{{ cookiecutter.repo_name }}/tests/auth/: __init__.py  test_auth_negative_paths.py  test_jwks_caching.py  test_jwt_validation.py
{{ cookiecutter.repo_name }}/tests/contract/: test_mcp_contracts.py
{{ cookiecutter.repo_name }}/tests/core/: test_conservative_fallback_chain.py
{{ cookiecutter.repo_name }}/tests/examples/: __init__.py  test_config_demo.py  test_encryption_usage.py  test_health_check_demo.py  test_openrouter_client_demo.py  test_vector_store_usage.py
{{ cookiecutter.repo_name }}/tests/integration/: test_ab_testing_framework.py  test_agent_lifecycle.py  test_auth_integration.py  test_comprehensive_error_handling.py  test_dynamic_loading_prototype.py  test_end_to_end_integration.py  test_fallback_system_integration.py  test_gradio_ui_integration.py  test_hybrid_router_integration.py  test_hybrid_routing_integration.py  test_mcp_config_integration.py  test_mcp_connectivity.py  test_qdrant_vector_store_integration.py  test_query_counselor_hyde_integration.py  test_real_mcp_integration.py  test_real_qdrant_integration.py  test_role_endpoints.py  test_security_fixes.py  test_service_token_integration.py  test_vector_store_integration.py
{{ cookiecutter.repo_name }}/tests/performance/: __init__.py  locustfile.py  performance_config.py  (+6 more)
{{cookiecutter.project_slug}}/: .coderabbit.yaml  .cruft.json  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIG_TEMPLATES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REUSE.toml  SECURITY.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  noxfile.py  osv-scanner.toml  pyproject.toml  renovate.json  sonar-project.properties
{{cookiecutter.project_slug}}/.claude/: README.md  claude.md
{{cookiecutter.project_slug}}/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
{{cookiecutter.project_slug}}/.qlty/: qlty.toml
{{cookiecutter.project_slug}}/docs/: OPENSSF_COMPLIANCE.md  PROJECT_SETUP.md  PYTHON_COMPATIBILITY.md
{{cookiecutter.project_slug}}/fuzz/: README.md  fuzz_input_validation.py
{{cookiecutter.project_slug}}/scripts/: README.md  check_quality_gate.py  check_type_hints.py  setup_github_protection.py  validate_assuredoss.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_example.py
{{cookiecutter.project_slug}}/tools/: validate_front_matter.py
(+240 files in other folders)
