# NOTE: This project uses UV as the package manager.
# Dependencies are defined in [project.dependencies] and [project.optional-dependencies] sections below.
# UV uses standard PEP 621 pyproject.toml format with uv.lock for reproducible builds.
[project]
name = "{{ cookiecutter.pypi_package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }},<3.15"
license = {text = "{{ cookiecutter.license }}"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

# Core production dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "rich>=13.5.0",
    {% if cookiecutter.include_cli == "yes" -%}
    "click>=8.1.0",
    {% endif -%}
]

# Optional dependency groups
[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",

    # Code Quality
    {% if cookiecutter.use_ruff == "yes" -%}
    "ruff>=0.9.0",
    {% endif -%}
    {% if cookiecutter.use_mypy == "yes" -%}
    "mypy>=1.4.0",
    {% endif -%}

    # Pre-commit
    {% if cookiecutter.use_pre_commit == "yes" -%}
    "pre-commit>=3.3.0",
    {% endif -%}

    # Documentation
    {% if cookiecutter.use_mkdocs == "yes" -%}
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "griffe-pydantic>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "python-frontmatter>=1.1.0",
    "ruamel-yaml>=0.18.0",
    {% endif -%}

    # Development Tools
    "interrogate>=1.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "safety>=3.7.0",
    {% if cookiecutter.include_nox == "yes" -%}
    "nox>=2025.10.16",
    "nox-uv>=1.0.0",
    {% endif -%}
    "mutmut>=3.3.1",

    # Google Cloud Assured OSS
    "google-auth>=2.0.0",
    "google-cloud-assured-oss>=0.1.0",
    "google-api-core>=2.0.0",
    "python-dotenv>=1.0.0",  # For loading .env files
]
{% if cookiecutter.include_ml_dependencies == "yes" %}
# Machine Learning dependencies
ml = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0",
]
{% endif %}
{% if cookiecutter.include_api_framework == "yes" %}
# API framework dependencies
api = [
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.18",
    "starlette>=0.49.1",
]
{% endif %}
{% if cookiecutter.include_cli == "yes" %}
[project.scripts]
{{ cookiecutter.cli_tool_name }} = "{{ cookiecutter.project_slug }}.cli:cli"
{% endif %}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

{% if cookiecutter.use_ruff == "yes" %}
# Ruff Configuration - Consolidated Linting & Formatting
[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version_short }}"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "D",    # pydocstyle
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "PERF", # Performance anti-patterns
    "FURB", # Refurb - modernization
    "LOG",  # Logging best practices
    "TRY",  # Exception handling
    "ERA",  # Commented-out code
    "FBT",  # Boolean trap detection
    "ASYNC",# Async/await best practices
]

ignore = [
    # Formatting
    "E501",   # line too long
    "COM812", # missing trailing comma
    "ISC001", # implicit string concatenation

    # Complexity
    "C901",  # too complex

    # Docstring (Google style)
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-docstring-summary-first-line

    # Practical exceptions
    "B008",   # function calls in defaults
    "S101",   # assert (pytest uses assert)
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "PTH123", # open() pathlib
    "FBT001", # Boolean positional arg
    "FBT002", # Boolean default arg
    "TRY003", # Long exception messages
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**/*.py" = ["ARG", "D", "S", "ERA"]
"scripts/**/*.py" = ["D", "T20", "TRY", "S", "PTH"]
"benchmarks/**/*.py" = ["D", "T20", "ARG", "TRY"]
"tools/**/*.py" = ["D", "T20", "TRY"]
{% if cookiecutter.include_nox == "yes" -%}
"noxfile.py" = ["D", "T20"]
{% endif -%}
{% endif %}
{% if cookiecutter.use_mypy == "yes" %}
# MyPy Configuration
[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
{% endif %}
# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/{{ cookiecutter.project_slug }}",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under={{ cookiecutter.code_coverage_target }}",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

# Interrogate Configuration (Docstring Coverage)
[tool.interrogate]
verbose = 1
fail-under = {{ cookiecutter.docstring_coverage_target }}
exclude = ["tests", "docs", "build", "dist"]
ignore-init-method = true
ignore-init-module = true
color = true

# Mutation Testing Configuration (mutmut)
[tool.mutmut]
paths_to_mutate = "src/"
backup = false
runner = "uv run pytest -x --assert=plain -o addopts=''"
tests_dir = "tests/"
dict_synonyms = "Struct, NamedStruct"

# Bandit Security Configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv"]
skips = []
tests = [
    "B201",  # flask_debug_true
    "B301",  # pickle
    "B302",  # marshal
    "B303",  # md5
    "B304",  # ciphers
    "B305",  # cipher_modes
    "B306",  # mktemp_q
    "B307",  # eval
    "B308",  # mark_safe
    "B309",  # httpsconnection
    "B310",  # urlopen
    "B311",  # random
    "B312",  # telnetlib
    "B313",  # xml_bad_cElementTree
    "B314",  # xml_bad_ElementTree
    "B315",  # xml_bad_expat_reader
    "B316",  # xml_bad_expat_builder
    "B317",  # xml_bad_sax
    "B318",  # xml_bad_pulldom
    "B319",  # xml_bad_etree
    "B320",  # xml_bad_etree_iterparse
    "B321",  # pickle_load
    "B322",  # unverified_context
    "B323",  # unverified_ftp
    "B324",  # hashlib
    "B325",  # tempnam
]

# UV Configuration
[tool.uv]
dev-dependencies = []  # Managed via [project.optional-dependencies]

# Package Index Configuration
# Google Assured OSS as primary source with PyPI fallback
# See .env.example for required Google Cloud credentials and configuration
#
# Indexes are configured at runtime via environment variables:
# - GOOGLE_CLOUD_PROJECT: Your GCP project ID
# - ASSURED_OSS_REGION: Region (us, europe, asia)
# - ASSURED_OSS_REPOSITORY: Repository name (default: assuredoss)
# - USE_ASSURED_OSS: Enable/disable Assured OSS (true/false)
#
# Index URL format:
# https://{ASSURED_OSS_REGION}-python.pkg.dev/{GOOGLE_CLOUD_PROJECT}/{ASSURED_OSS_REPOSITORY}/simple/
#
# UV automatically falls back to PyPI when packages are not found in Assured OSS.
# Authentication uses GOOGLE_APPLICATION_CREDENTIALS or GOOGLE_APPLICATION_CREDENTIALS_B64.
