# NOTE: This project uses UV as the package manager.
# Dependencies are defined in [project.dependencies] and [project.optional-dependencies] sections below.
# UV uses standard PEP 621 pyproject.toml format with uv.lock for reproducible builds.
[project]
name = "{{ cookiecutter.pypi_package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "{{ cookiecutter.license }}"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

# Core production dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "rich>=13.5.0",
    {% if cookiecutter.include_cli == "yes" -%}
    "click>=8.1.0",
    {% endif -%}

    # Cross-Version Compatibility Dependencies
    # =========================================
    # This template targets Python 3.10-3.14. Add version-specific dependencies
    # here if your code needs compatibility shims or replacements.
    #
    # COMMON BACKPORTS FOR 3.10 COMPATIBILITY:
    #   "tomli>=2.0.0; python_version < '3.11'",  # TOML parser (tomllib added in 3.11)
    #   "exceptiongroup>=1.1.0; python_version < '3.11'",  # Exception groups (added in 3.11)
    #   "typing-extensions>=4.12.0",  # Backport newer typing features
    #
    # AVAILABLE IN 3.11+:
    #   - tomllib: Native TOML parser
    #   - asyncio.TaskGroup: Structured concurrency
    #   - typing.Self, TypeVarTuple, Never, LiteralString
    #   - ExceptionGroup and except* syntax
    #
    # PEP 594 REMOVALS IN 3.13 (add replacements if needed):
    #   Removed modules: aifc, audioop, cgi, cgitb, chunk, crypt, imghdr, mailcap,
    #   msilib, nis, nntplib, ossaudiodev, pipes, sndhdr, spwd, sunau, telnetlib,
    #   uu, xdrlib
    #
    # Examples of version-specific dependencies:
    #   # Backport for Python 3.10
    #   "tomli>=2.0.0; python_version < '3.11'",
    #
    #   # Replacement for removed modules in 3.13+
    #   "legacy-cgi>=2.6.1; python_version >= '3.13'",  # If you need cgi module
    #   "filetype>=1.2.0",  # Better alternative to imghdr/sndhdr
    #
    #   # Typing enhancements
    #   "typing-extensions>=4.12.0; python_version < '3.13'",  # For latest typing features
    #
    # PYTHON 3.14+ CONSIDERATIONS:
    #   - from __future__ import annotations is deprecated (but still works until 2029+)
    #   - Free-threaded mode (python3.14t) may need GIL-compatible packages
    #   - NotImplemented in boolean context raises TypeError (was warning)
    #   - PEP 649: Deferred annotation evaluation (impacts runtime introspection)
    #
    # Examples for 3.14+ compatibility:
    #   # Free-threaded mode support (check package documentation)
    #   "numpy>=2.1.0; python_version >= '3.14'",  # Supports free-threaded mode
    #
    # UV handles these automatically based on the Python version being used.
    # See: https://docs.astral.sh/uv/concepts/dependencies/#dependency-specifiers
]

# Optional dependency groups
[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",

    # Code Quality
    {% if cookiecutter.use_ruff == "yes" -%}
    "ruff>=0.9.0",
    {% endif -%}
    {% if cookiecutter.use_mypy == "yes" -%}
    "mypy>=1.4.0",
    {% endif -%}

    # Pre-commit
    {% if cookiecutter.use_pre_commit == "yes" -%}
    "pre-commit>=3.3.0",
    {% endif -%}

    # Documentation
    {% if cookiecutter.use_mkdocs == "yes" -%}
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "griffe-pydantic>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "python-frontmatter>=1.1.0",
    "ruamel-yaml>=0.18.0",
    {% endif -%}

    # Development Tools
    "interrogate>=1.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "safety>=3.7.0",
    {% if cookiecutter.include_nox == "yes" -%}
    "nox>=2025.10.16",
    "nox-uv>=1.0.0",
    {% endif -%}
    "mutmut>=3.3.1",

    # Google Cloud Assured OSS
    "google-auth>=2.0.0",
    "google-cloud-assured-oss>=0.1.0",
    "google-api-core>=2.0.0",
    "python-dotenv>=1.0.0",  # For loading .env files
]
{% if cookiecutter.include_ml_dependencies == "yes" %}
# Machine Learning dependencies
ml = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0",
]
{% endif %}
{% if cookiecutter.include_api_framework == "yes" %}
# API framework dependencies
api = [
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.18",
    "starlette>=0.49.1",
]
{% endif %}
{% if cookiecutter.include_sentry == "yes" %}
# Monitoring and observability
monitoring = [
    "sentry-sdk[fastapi]>=2.0.0",  # Error tracking and performance monitoring
]
{% endif %}
{% if cookiecutter.include_background_jobs == "arq" %}
# Background job processing with ARQ (async-native, Redis-based)
jobs = [
    "arq>=0.25.0",  # Async task queue
    "redis[hiredis]>=5.0.0",  # Redis client with C parser
]
{% endif %}
{% if cookiecutter.include_background_jobs == "celery" %}
# Background job processing with Celery (traditional, supports multiple brokers)
jobs = [
    "celery[redis]>=5.3.0",  # Distributed task queue
    "redis[hiredis]>=5.0.0",  # Redis broker
]
{% endif %}
{% if cookiecutter.include_caching == "yes" %}
# Caching infrastructure
caching = [
    "redis[hiredis]>=5.0.0",  # Redis client with C parser for performance
]
{% endif %}
{% if cookiecutter.include_load_testing == "yes" %}
# Load and performance testing
load_testing = [
    "locust>=2.20.0",  # Python-based load testing with web UI
]
{% endif %}
{% if cookiecutter.include_cli == "yes" %}
[project.scripts]
{{ cookiecutter.cli_tool_name }} = "{{ cookiecutter.project_slug }}.cli:cli"
{% endif %}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

{% if cookiecutter.use_ruff == "yes" %}
# Ruff Configuration - Consolidated Linting & Formatting
[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version_short }}"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "D",    # pydocstyle
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "PERF", # Performance anti-patterns
    "FURB", # Refurb - modernization
    "LOG",  # Logging best practices
    "TRY",  # Exception handling
    "ERA",  # Commented-out code
    "FBT",  # Boolean trap detection
    "ASYNC",# Async/await best practices
]

ignore = [
    # Formatting
    "E501",   # line too long
    "COM812", # missing trailing comma
    "ISC001", # implicit string concatenation

    # Complexity
    "C901",  # too complex

    # Docstring (Google style)
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-docstring-summary-first-line

    # Practical exceptions
    "B008",   # function calls in defaults
    "S101",   # assert (pytest uses assert)
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "PTH123", # open() pathlib
    "FBT001", # Boolean positional arg
    "FBT002", # Boolean default arg
    "TRY003", # Long exception messages
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**/*.py" = ["ARG", "D", "S", "ERA"]
"scripts/**/*.py" = ["D", "T20", "TRY", "S", "PTH"]
"benchmarks/**/*.py" = ["D", "T20", "ARG", "TRY"]
"tools/**/*.py" = ["D", "T20", "TRY"]
{% if cookiecutter.include_nox == "yes" -%}
"noxfile.py" = ["D", "T20"]
{% endif -%}
{% endif %}
{% if cookiecutter.use_mypy == "yes" %}
# MyPy Configuration
[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
{% endif %}
# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/{{ cookiecutter.project_slug }}",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under={{ cookiecutter.code_coverage_target }}",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
    "py310: marks tests specific to Python 3.10",
    "py311plus: marks tests requiring Python 3.11+",
    "py313plus: marks tests requiring Python 3.13+ (PEP 594 removals)",
    "py314plus: marks tests requiring Python 3.14+ (free-threaded, PEP 649)",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
branch = true
{% if cookiecutter.include_sonarcloud == "yes" -%}
relative_files = true  # Required for SonarCloud in GitHub Actions
{% endif -%}
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

# Interrogate Configuration (Docstring Coverage)
[tool.interrogate]
verbose = 1
fail-under = {{ cookiecutter.docstring_coverage_target }}
exclude = ["tests", "docs", "build", "dist"]
ignore-init-method = true
ignore-init-module = true
color = true

# Mutation Testing Configuration (mutmut)
[tool.mutmut]
paths_to_mutate = "src/"
backup = false
runner = "uv run pytest -x --assert=plain -o addopts=''"
tests_dir = "tests/"
dict_synonyms = "Struct, NamedStruct"

# Bandit Security Configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv"]
skips = []
tests = [
    "B201",  # flask_debug_true
    "B301",  # pickle
    "B302",  # marshal
    "B303",  # md5
    "B304",  # ciphers
    "B305",  # cipher_modes
    "B306",  # mktemp_q
    "B307",  # eval
    "B308",  # mark_safe
    "B309",  # httpsconnection
    "B310",  # urlopen
    "B311",  # random
    "B312",  # telnetlib
    "B313",  # xml_bad_cElementTree
    "B314",  # xml_bad_ElementTree
    "B315",  # xml_bad_expat_reader
    "B316",  # xml_bad_expat_builder
    "B317",  # xml_bad_sax
    "B318",  # xml_bad_pulldom
    "B319",  # xml_bad_etree
    "B320",  # xml_bad_etree_iterparse
    "B321",  # pickle_load
    "B322",  # unverified_context
    "B323",  # unverified_ftp
    "B324",  # hashlib
    "B325",  # tempnam
]

# UV Configuration
[tool.uv]
dev-dependencies = []  # Managed via [project.optional-dependencies]

# Package Index Configuration
# Google Assured OSS as primary source with PyPI fallback
# See .env.example for required Google Cloud credentials and configuration
#
# Indexes are configured at runtime via environment variables:
# - GOOGLE_CLOUD_PROJECT: Your GCP project ID
# - ASSURED_OSS_REGION: Region (us, europe, asia)
# - ASSURED_OSS_REPOSITORY: Repository name (default: assuredoss)
# - USE_ASSURED_OSS: Enable/disable Assured OSS (true/false)
#
# Index URL format:
# https://{ASSURED_OSS_REGION}-python.pkg.dev/{GOOGLE_CLOUD_PROJECT}/{ASSURED_OSS_REPOSITORY}/simple/
#
# UV automatically falls back to PyPI when packages are not found in Assured OSS.
# Authentication uses GOOGLE_APPLICATION_CREDENTIALS or GOOGLE_APPLICATION_CREDENTIALS_B64.
